--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/l10n_pe_stock.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/misc.xml
+.idea/modules.xml
